Se agrego el funcionamiento del controlador, vista y modelo de proveedores

--- a/src/Vistas/Categorias/FrmMostrarCategoria.form
+++ b/src/Vistas/Categorias/FrmMostrarCategoria.form
@@ -55,7 +55,7 @@
                                   <Component id="jButton1" min="-2" pref="138" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="jButton3" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace pref="40" max="32767" attributes="0"/>
+                                  <EmptySpace pref="25" max="32767" attributes="0"/>
                                   <Component id="jButton2" min="-2" pref="138" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -159,6 +159,12 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButton3">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="cc" green="ff" red="cc" type="rgb"/>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Actualizar datos"/>
           </Properties>
           <Events>
